# engine

./: .gitignore  CMakeLists.txt  CMakeListsSDL.txt  Makefile  Readme.md  SDLMain.m  basename  main.cpp  makefile  xcode.sh
cmake/: FindFreeImage.cmake
engine/: CMakeLists.txt  file.cpp  main.cpp
engine/extlibs/libs-msvc/: glfw3dll.lib
engine/extlibs/libs-osx/: libGLEW.1.9.0.dylib  libglfw.3.0.dylib  libphysfs.2.1.0.dylib  libpng16.16.dylib
engine/gl/: shader.cpp
engine/src/: CMakeLists.txt  debug.cpp  debug.hpp  engine.h  file.cpp  file.hpp  gl.cpp  logger.hpp  shader.cpp  shader.hpp  string.cpp
engine/src/engine/: engine.hpp  logger.hpp
engine/src/engine/gl/: error.hpp  shader.cpp
engine/src/engine/open_gl/: shader.cpp
engine/src/gl/: gl.cpp  gl.hpp  shader.hpp
examples/pong/: CMakeLists.txt  main.cpp
examples/pong/shaders/: fragment_shader.fsh  vertex_shader.glsl  vertex_shader.vsh
examples/pong/xcode/: Info.plist
examples/pong/xcode/Pong/: AppDelegate.h  AppDelegate.m  Pong-Info.plist  main.m
examples/pong/xcode/Pong.xcodeproj/: project.pbxproj
examples/pong/xcode/Pong.xcodeproj/project.xcworkspace/xcshareddata/: Pong.xccheckout
examples/pong/xcode/pong/: AppDelegate.h  AppDelegate.m  main.m  pong-Prefix.pch
examples/pong/xcode/pong.xcodeproj/: project.pbxproj
examples/pong/xcode/pong/en.lproj/: MainMenu.xib
extlibs/headers/: gl3.h.1
extlibs/headers/SDL2/: SDL_revision.h
extlibs/libs-msvc/: physfs.lib
extlibs/libs-msvc/debug/: glfw3dll.lib
extlibs/libs-osx/: libGLEWmx.1.9.0.dylib  libSDL2-2.0.0.dylib  libSDL2.la  libglfw.3.0.dylib  libphysfs.2.1.0.dylib
extlibs/libs-osx/Frameworks/sfml-audio.framework/Versions/2.0.0/: sfml-audio
extlibs/libs-osx/Frameworks/sfml-system.framework/Versions/2.0.0/: sfml-system
extlibs/libs-osx/sfml-graphics.framework/Versions/2.0.0/: sfml-graphics
extlibs/libs-osx/sfml-network.framework/Versions/2.0.0/: sfml-network
extlibs/libs-osx/sfml-window.framework/Versions/2.0.0/: sfml-window
lib/: CMakeLists.txt  Debug.h  Engine.cpp  Engine.h  Game.cpp  Game.h  InputState.cpp  Keyboard.cpp  Keyboard.h  OpenGL.h  Renderer.cpp  Renderer.h
lib/input/: Keyboard.cpp  Keyboard.h
resources/shaders/: fragment_shader.glsl  vertex_shader.glsl
src/: Debug.h  Game.cpp  Game.h  InputHandler.cpp  InputHandler.h  InputState.cpp  InputState.h  Keyboard.cpp  Renderer.cpp  Renderer.h  Settings.hpp  engine.cpp  engine.h  open_gl.h  settings.h  shared.h
src2/: main.cpp
src3/: main.cpp
src4/: debug.cpp  debug.hpp  file.cpp  file.hpp  gl.cpp  gl.hpp  main.cpp  shader.cpp  shader.hpp  string.cpp  string.hpp
src4/gl/: shader.cpp  shader.hpp
