set(ENGINE_SRC_PATH "${CMAKE_CURRENT_SOURCE_DIR}/src")
file(GLOB_RECURSE ENGINE_SRC_HEADERS "${ENGINE_SRC_PATH}/*.hpp")
file(GLOB_RECURSE ENGINE_SRC_OBJECTS "${ENGINE_SRC_PATH}/*.cpp")

set(ENGINE_EXTLIB_HEADERS_PATH "extlibs/headers")
file(GLOB_RECURSE ENGINE_EXTLIB_HEADERS "${ENGINE_EXTLIB_HEADERS_PATH}/*.h")
include_directories(${ENGINE_EXTLIB_HEADERS_PATH})

add_library(engine ${ENGINE_SRC_HEADERS} ${ENGINE_SRC_OBJECTS} ${ENGINE_EXTLIB_HEADERS})
